adds jetty jmx configuration

--- a/pom.xml
+++ b/pom.xml
@@ -470,6 +470,7 @@
                     <webAppConfig>
                         <contextPath>/${project.name}</contextPath>
                     </webAppConfig>
+                    <jettyXml>src/main/resources/jetty-jmx.xml</jettyXml>
                 </configuration>
             </plugin>
         </plugins>
