--- a/had_one_dismissal/pom.xml
+++ b/had_one_dismissal/pom.xml
@@ -209,6 +209,11 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-oxm</artifactId>
+          <version>${spring.version}</version>
+        </dependency>
+        <dependency>
             <groupId>commons-pool</groupId>
             <artifactId>commons-pool</artifactId>
             <version>1.5.6</version>
