--- a/had_one_dismissal/src/main/resources/log4j.properties
+++ b/had_one_dismissal/src/main/resources/log4j.properties
@@ -3,6 +3,8 @@ log4j.rootLogger=error, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
+log4j.logger.com.jclarity=info
+
 # Print the date in ISO 8601 format
 log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
