--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -286,7 +286,7 @@
             <artifactId>commons-codec</artifactId>
             <version>1.5</version>
         </dependency>
-    <dependency>
+        <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-jsp</artifactId>
             <version>2.2.2</version>
@@ -301,6 +301,11 @@
                     <artifactId>commons-logging</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.jclarity.had_one_dismissal</groupId>
+            <artifactId>crud_common</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
     <build>
