--- a/had_one_dismissal/pom.xml
+++ b/had_one_dismissal/pom.xml
@@ -343,6 +343,11 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.jclarity.had_one_dismissal</groupId>
+            <artifactId>crud_common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
