--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jclarity</groupId>
     <artifactId>had_one_dismissal-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Had One Dissmissal Parent</name>
