--- a/sca-test-harness/pom.xml
+++ b/sca-test-harness/pom.xml
@@ -4,10 +4,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jclarity</groupId>
     <artifactId>sca-test-harness</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0.BUILD-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Had One Dissmissal Test Harness</name>
+    <name>Had One Dismissal Test Harness</name>
     <description>A project which tests the slow crud app</description>
 
     <dependencies>
