--- a/had_one_dismissal/src/main/resources/META-INF/spring/database.properties
+++ b/had_one_dismissal/src/main/resources/META-INF/spring/database.properties
@@ -1,6 +1,10 @@
-#Updated at Mon Mar 18 18:01:04 GMT 2013
-#Mon Mar 18 18:01:04 GMT 2013
-database.driverClassName=org.hsqldb.jdbcDriver
-database.url=jdbc\:hsqldb\:mem\:had_one_dismissal
-database.username=sa
-database.password=
+
+memory_database.driverClassName=org.hsqldb.jdbcDriver
+memory_database.url=jdbc\:hsqldb\:mem\:had_one_dismissal
+memory_database.username=sa
+memory_database.password=
+
+daemon_database.driverClassName=org.hsqldb.jdbcDriver
+daemon_database.url=jdbc\:hsqldb\:mem\:FOO
+daemon_database.username=sa
+daemon_database.password=
