adds in postgres config and deletes hibernate dialect nonsense

--- a/had_one_dismissal/src/main/resources/META-INF/spring/database.properties
+++ b/had_one_dismissal/src/main/resources/META-INF/spring/database.properties
@@ -4,7 +4,7 @@ memory_database.url=jdbc\:hsqldb\:mem\:had_one_dismissal
 memory_database.username=sa
 memory_database.password=
 
-daemon_database.driverClassName=org.hsqldb.jdbcDriver
-daemon_database.url=jdbc\:hsqldb\:mem\:FOO
-daemon_database.username=sa
-daemon_database.password=
+daemon_database.driverClassName=org.postgresql.Driver
+daemon_database.url=jdbc:postgresql://localhost:5432/had_one_dismissal
+daemon_database.username=had_one_dismissal
+daemon_database.password=lei0Ie0d
