--- a/sca-test-harness/pom.xml
+++ b/sca-test-harness/pom.xml
@@ -14,8 +14,9 @@
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
+        <toolsjar>${java.home}/../lib/tools.jar</toolsjar>
     </properties>
-
+    
     <dependencies>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -37,6 +38,23 @@
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>20040117.000000</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <version>localVersion</version>
+            <scope>system</scope>
+            <systemPath>${toolsjar}</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.jclarity.had_one_dismissal</groupId>
+            <artifactId>crud_common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>12.0.1</version>
         </dependency>
     </dependencies>
 </project>
