add deploymentManagement and scm

--- a/had_one_dismissal/pom.xml
+++ b/had_one_dismissal/pom.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  
+  
+    <parent>
+        <groupId>com.jclarity</groupId>
+        <artifactId>had_one_dismissal-parent</artifactId>
+        <version>0.1.0.BUILD-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+  
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jclarity.had_one_dismissal</groupId>
     <artifactId>had_one_dismissal</artifactId>
     <packaging>war</packaging>
-    <version>0.1.0.BUILD-SNAPSHOT</version>
     <name>had_one_dismissal</name>
     <properties>
         <aspectj.version>1.7.0</aspectj.version>
