--- a/sca-test-harness/pom.xml
+++ b/sca-test-harness/pom.xml
@@ -2,10 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.jclarity</groupId>
     <artifactId>sca-test-harness</artifactId>
-    <version>0.1.0.BUILD-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <parent>
+        <groupId>com.jclarity</groupId>
+        <artifactId>had_one_dismissal-parent</artifactId>
+        <version>0.1.0.BUILD-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
     <name>Had One Dismissal Test Harness</name>
     <description>A project which tests the slow crud app</description>
