Force old connections to close preventing file leaks

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>crud-common</module>
         <module>auth-service</module>
         <module>had_one_dismissal</module>
+        <module>sca-test-harness</module>
     </modules>
 
     <scm>
